force-app/main/default/objects/Service_Plan__c/Service_Plan__c.object-meta.xml
<CustomObject>
    <description>Object to summarize recurring Order Products serviced by a Technician.</description>
    <label>Service Plan</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Service Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>