force-app/main/default/objects/Service_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associated account record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Plans</relationshipLabel>
    <relationshipName>Service_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>