force-app/main/default/objects/Service_Plan__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>The earliest possible date a Service Plan can begin.</description>
    <inlineHelpText>The earliest possible date a Service Plan can begin.</inlineHelpText>
    <label>Anchor Date</label>
    <type>Date</type>
</CustomField>