force-app/main/default/objects/Service_Plan__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Service frequency for recurring Order Products.</description>
    <inlineHelpText>Service frequency for recurring Order Products.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Frequency</valueSetName>
    </valueSet>
</CustomField>