force-app/main/default/objects/Service_Plan__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Route to which this Service Plan is associated</description>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Service Plans</relationshipLabel>
    <relationshipName>Service_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>