force-app/main/default/objects/Service_Plan__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Schedule Type record. Used to refine the frequency of this Service Plan. For example, if frequency is 7 days, schedule type may be Every 7 Days - Monday.</description>
    <inlineHelpText>Used to further refine the frequency of this Service Plan.For example, if frequency is 7 days, schedule type may be Every 7 Days - Monday.</inlineHelpText>
    <label>Schedule Type</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The schedule type must have the same frequency as the service plan.</errorMessage>
        <filterItems>
            <field>$Source.Frequency__c</field>
            <operation>equals</operation>
            <valueField>Schedule_Type__c.Frequency__c</valueField>
        </filterItems>
        <infoMessage>The schedule type must have the same frequency as the service plan.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Schedule_Type__c</referenceTo>
    <relationshipLabel>Service Plans</relationshipLabel>
    <relationshipName>Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>