force-app/main/default/objects/Service_Plan__c/fields/Service_Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Service_Total_Duration__c</fullName>
    <description>Sum of Service_Worktype_Duration__c of related order products</description>
    <label>Total Duration in minutes</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>